--- a/app/src/main/res/menu/expenses_menu.xml
+++ b/app/src/main/res/menu/expenses_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_categories"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:title="@string/manage_categories"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_export_csv"
         android:icon="@android:drawable/ic_menu_save"
         android:title="Export to CSV"
