--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_expenses_to_edit_expense"
             app:destination="@id/navigation_edit_expense" />
+        <action
+            android:id="@+id/action_navigation_expenses_to_categories"
+            app:destination="@id/navigation_categories" />
     </fragment>
 
     <fragment
@@ -47,5 +50,11 @@
             android:name="expenseId"
             app:argType="long" />
     </fragment>
+
+    <fragment
+        android:id="@+id/navigation_categories"
+        android:name="com.example.expensetracker.ui.fragment.CategoriesFragment"
+        android:label="@string/categories"
+        tools:layout="@layout/fragment_categories" />
 
 </navigation>
