--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:hint="@string/budget_amount_hint"
-                    app:prefixText="$"
+                    app:prefixText="৳"
                     app:startIconDrawable="@android:drawable/ic_menu_edit">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -107,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?attr/textAppearanceBody1"
                         android:textStyle="bold"
-                        tools:text="$1,000.00" />
+                        tools:text="৳1,000.00" />
 
                 </LinearLayout>
 
@@ -130,7 +130,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?attr/textAppearanceBody1"
                         android:textStyle="bold"
-                        tools:text="$750.00" />
+                        tools:text="৳750.00" />
 
                 </LinearLayout>
 
@@ -153,7 +153,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?attr/textAppearanceBody1"
                         android:textStyle="bold"
-                        tools:text="$250.00" />
+                        tools:text="৳250.00" />
 
                 </LinearLayout>
 
