--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -22,7 +22,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="৳45.99" />
+            tools:text="BDT 45.99" />
 
         <TextView
             android:id="@+id/text_view_category"
