--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
     <color name="black">#000000</color>
     <color name="gray">#757575</color>
     <color name="light_gray">#EEEEEE</color>
+    
+    <!-- Action colors -->
+    <color name="colorPrimary">@color/primary</color>
+    <color name="colorError">#F44336</color>
 </resources>
